fixed white space

--- a/web/public/css/home/index.css
+++ b/web/public/css/home/index.css
@@ -16,6 +16,10 @@ body {
     min-width: 1280px;
 }
 
+header {
+    height: 61px;
+}
+
 nav {
     display: inline-block;
     border-bottom: 1px solid #eee;
